force-app/main/default/objects/Branch__c/fields/Branch_Order__c.field-meta.xml
<CustomField>
    <fullName>Branch_Order__c</fullName>
    <label>Branch Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>