force-app/main/default/objects/Branch__c/fields/Skip_Next_Questions_On__c.field-meta.xml
<CustomField>
    <fullName>Skip_Next_Questions_On__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <label>Skip to next branch questions on :</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>